--- a/src/apps/Menu/Resources/MainMenu.xib
+++ b/src/apps/Menu/Resources/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -12,49 +12,6 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Karabiner_Menu">
-            <connections>
-                <outlet property="menuController" destination="mfy-Mo-ZtT" id="dL7-y9-rxq"/>
-            </connections>
-        </customObject>
-        <customObject id="mfy-Mo-ZtT" customClass="MenuController" customModule="Karabiner_Menu">
-            <connections>
-                <outlet property="menu" destination="3gY-Tz-M5Y" id="pfK-VM-yS7"/>
-            </connections>
-        </customObject>
-        <menu id="3gY-Tz-M5Y" userLabel="StatusBarMenu">
-            <items>
-                <menuItem isSeparatorItem="YES" title="endoflist" id="Nrs-0z-bVB"/>
-                <menuItem title="Preferences..." id="GIk-F4-9kA">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="openPreferences:" target="mfy-Mo-ZtT" id="wVO-Qb-2qJ"/>
-                    </connections>
-                </menuItem>
-                <menuItem title="Check for updates..." id="5uz-ag-fpT">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="checkForUpdates:" target="mfy-Mo-ZtT" id="CzE-Zy-zor"/>
-                    </connections>
-                </menuItem>
-                <menuItem title="Launch EventViewer..." id="5ze-Yf-v7I">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="launchEventViewer:" target="mfy-Mo-ZtT" id="E3c-D3-XBY"/>
-                    </connections>
-                </menuItem>
-                <menuItem isSeparatorItem="YES" id="t9I-dd-l5G"/>
-                <menuItem title="Quit Karabiner-Elements" id="lHD-gf-yxO">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <connections>
-                        <action selector="quitKarabiner:" target="mfy-Mo-ZtT" id="PIY-MC-k6y"/>
-                    </connections>
-                </menuItem>
-            </items>
-            <connections>
-                <outlet property="delegate" destination="mfy-Mo-ZtT" id="5vY-aM-iPc"/>
-            </connections>
-            <point key="canvasLocation" x="-17" y="151"/>
-        </menu>
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Karabiner_Menu"/>
     </objects>
 </document>
