Relaunch MultitouchExtension by launchd

--- a/src/apps/MultitouchExtension/Resources/MainMenu.xib
+++ b/src/apps/MultitouchExtension/Resources/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22690"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -15,15 +15,7 @@
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
                 <menuItem title="Karabiner-MultitouchExtension" id="56">
-                    <menu key="submenu" title="Karabiner-MultitouchExtension" systemMenu="apple" id="57">
-                        <items>
-                            <menuItem title="Quit Karabiner-MultitouchExtension" keyEquivalent="q" id="136">
-                                <connections>
-                                    <action selector="terminate:" target="-3" id="449"/>
-                                </connections>
-                            </menuItem>
-                        </items>
-                    </menu>
+                    <menu key="submenu" title="Karabiner-MultitouchExtension" systemMenu="apple" id="57"/>
                 </menuItem>
                 <menuItem title="File" id="83">
                     <menu key="submenu" title="File" id="81">
